--- a/cus/_template/pl/fe/matter/enroll/scenario/common/templates/simple/config.json
+++ b/cus/_template/pl/fe/matter/enroll/scenario/common/templates/simple/config.json
@@ -132,17 +132,16 @@
         {
             "entry": "enroll"
         },
-        "scope": "sns",
+        "scope":
+        {
+            "sns": "Y"
+        },
         "sns":
         {
             "wx":
             {
                 "entry": "enroll"
             }
-        },
-        "other":
-        {
-            "entry": "$mpfollow"
         }
     },
     "count_limit": "0",
