--- a/cus/_template/pl/fe/matter/enroll/scenario/common/templates/simple/config.json
+++ b/cus/_template/pl/fe/matter/enroll/scenario/common/templates/simple/config.json
@@ -146,6 +146,5 @@
     },
     "count_limit": "0",
     "multi_rounds": "Y",
-    "enrolled_entry_page": "result",
-    "schema_include_mission_phases": "Y"
+    "enrolled_entry_page": "result"
 }
