--- a/cus/_template/pl/fe/matter/enroll/scenario/registration/templates/simple/config.json
+++ b/cus/_template/pl/fe/matter/enroll/scenario/registration/templates/simple/config.json
@@ -289,6 +289,5 @@
     },
     "count_limit": "1",
     "multi_rounds": "N",
-    "enrolled_entry_page": "result",
-    "schema_include_mission_phases": "Y"
+    "enrolled_entry_page": "result"
 }
