--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
+    "css-loader": "^0.28.11",
     "less": "^2.7.3",
-    "less-loader": "^4.0.5"
+    "less-loader": "^4.0.5",
+    "style-loader": "^0.20.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
